--- a/test_fib.html
+++ b/test_fib.html
@@ -8,7 +8,8 @@
 
     <script type="text/javascript">
     
-
+    // It will return the num before the one stored in 'num" at the Fibonacci sequence.
+      
       var num = 55;
       var a = 0;
       var b = 1;
